--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
 
   <p>
     "<a href="papers/projects.pdf">Project Selection with Partially Verifiable Information</a>"<br/>
-    Sumit Goel, Wade Hann-Caruthers, <i>presented at <b>Conference on Web and Internet Economics (WINE 2022)</b></i>
+    Sumit Goel, Wade Hann-Caruthers, <i>presented at <b>Conference on Web and Internet Economics (WINE 2022)</b></i><br/><br/>
+    "Multi-agent contract design with independent trials: Winners-take-all based on weight and priority"<br/>
+    Sumit Goel, Wade Hann-Caruthers<br/><br/>
+    "Cascading mechanisms"<br/>
+    Wade Hann-Caruthers, Alejandro Robinson-Cortés
   </p>
 
   <br/>
