updated job title

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <p>
     <br/>
-    I am a Zuckerman postdoctoral fellow in the <a href="https://gametheory.net.technion.ac.il/">game theory group</a> at the Technion.
+    I am a postdoctoral fellow in the <a href="https://gametheory.net.technion.ac.il/">game theory group</a> at the Technion.
     <br/>
     <br/>
    My research interests lie primarily in microeconomic theory, especially social learning, social choice, and mechanism design. My current work is focused on social learning on networks, and in particular on the role of network structure in determining the quality of long-term population-level outcomes.
