--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <p>
     "<a href="papers/projects.pdf">Project Selection with Partially Verifiable Information</a>"<br/>
-    Sumit Goel, Wade Hann-Caruthers, <b>R&R</b> at <b>Mathematical Social Sciences</b>, <i>presented at <b>Conference on Web and Internet Economics (WINE 2022)</b></i><br/><br/>
+    Sumit Goel, Wade Hann-Caruthers, <b>accepted</b> at <b>Mathematical Social Sciences</b> (2024), <i>presented at <b>Conference on Web and Internet Economics (WINE 2022)</b></i><br/><br/>
     "Multi-agent contract design with independent trials: Winners-take-all based on weight and priority"<br/>
     Sumit Goel, Wade Hann-Caruthers<br/><br/>
     "Cascading mechanisms"<br/>
