--- a/index.html
+++ b/index.html
@@ -53,11 +53,9 @@
   <h2>Working papers</h2>
 
   <p>
-    "<a href="papers/projects.pdf">Project Selection with Partially Verifiable Information</a>"<br/>
-    Sumit Goel, Wade Hann-Caruthers, <b>accepted</b> at <b>Mathematical Social Sciences</b> (2024), <i>presented at <b>Conference on Web and Internet Economics (WINE 2022)</b></i><br/><br/>
-    "Multi-agent contract design with independent trials: Winners-take-all based on weight and priority"<br/>
+    "Optimality of weighted contracts for multi-agent contract design with a budget", <i>presented at <b>Economics and Computation (EC24)</b></i><br/>
     Sumit Goel, Wade Hann-Caruthers<br/><br/>
-    "Cascading mechanisms"<br/>
+    "Cascading mechanisms", <i>presented at <b>Stony Brook International Conference on Game Theory (2024)</b></i><br/>
     Wade Hann-Caruthers, Alejandro Robinson-Cortés
   </p>
 
@@ -66,6 +64,9 @@
   <h2>Publications</h2>
 
   <p>
+    <h3>2024</h3>
+    "<a href="papers/projects.pdf">Project Selection with Partially Verifiable Information</a>"<br/>
+    Sumit Goel, Wade Hann-Caruthers, <b>accepted</b> at <b>Mathematical Social Sciences</b> (2024), <i>presented at <b>Conference on Web and Internet Economics (WINE 2022)</b></i><br/><br/>
     <h3>2022</h3>
       "<a href="papers/median.pdf">Optimality of the coordinate-wise median mechanism for strategyproof facility location in two dimensions</a>"<br/>
       Sumit Goel, Wade Hann-Caruthers, <b>Social Choice and Welfare</b>
