--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
   <h2>Working papers</h2>
 
   <p>
+    "<a href="papers/diffusion.pdf">Network and Timing Effects in Social Learning</a>"<br/>
+    Wade Hann-Caruthers, Minghao Pan, Omer Tamuz<br/><br/>
     "Optimality of weighted contracts for multi-agent contract design with a budget", <i>presented at <b>Economics and Computation (EC24)</b></i><br/>
     Sumit Goel, Wade Hann-Caruthers<br/><br/>
     "Cascading mechanisms", <i>presented at <b>Stony Brook International Conference on Game Theory (2024)</b></i><br/>
