added titles for papers with itai

--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
     "Optimality of weighted contracts for multi-agent contract design with a budget", <i>presented at <b>Economics and Computation (EC24)</b></i><br/>
     Sumit Goel, Wade Hann-Caruthers<br/><br/>
     "Cascading mechanisms", <i>presented at <b>Stony Brook International Conference on Game Theory (2024)</b></i><br/>
-    Wade Hann-Caruthers, Alejandro Robinson-Cortés
+    Wade Hann-Caruthers, Alejandro Robinson-Cortés<br/><br/>
+    "The Positive Effect of Garbling on Social Learning"<br/>
+    Itai Arieli, Yakov Babichenko, Wade Hann-Caruthers</br></br>
+    "Anonymous Network Formation"<br/>
+    Itai Arieli, Leonie Baumann, Wade Hann-Caruthers
   </p>
 
   <br/>
