--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     Sumit Goel, Wade Hann-Caruthers<br/><br/>
     "Cascading mechanisms", <i>presented at <b>Stony Brook International Conference on Game Theory (2024)</b></i><br/>
     Wade Hann-Caruthers, Alejandro Robinson-Cortés<br/><br/>
-    "The Positive Effect of Garbling on Social Learning"<br/>
+    "<a href="papers/garbling.pdf">The Positive Effect of Garbling on Social Learning</a>"<br/>
     Itai Arieli, Yakov Babichenko, Wade Hann-Caruthers</br></br>
     "Anonymous Network Formation"<br/>
     Itai Arieli, Leonie Baumann, Wade Hann-Caruthers
