changed pw to luce

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
   <p>
     "<a href="papers/diffusion.pdf">Network and Timing Effects in Social Learning</a>"<br/>
     Wade Hann-Caruthers, Minghao Pan, Omer Tamuz<br/><br/>
-    "<a href="papers/contract_multiagent.pdf">Optimality of weighted contracts for multi-agent contract design with a budget</a>", <i>presented at <b>Economics and Computation (EC24)</b></i><br/>
+    "<a href="papers/luce.pdf">Luce Contracts</a>", <i>presented at <b>Economics and Computation (EC24)</b></i><br/>
+    (previous version circulated under the title "Optimality of weighted contracts for multi-agent contract design with a budget")<br/>
     Sumit Goel, Wade Hann-Caruthers<br/><br/>
     "Cascading mechanisms", <i>presented at <b>Stony Brook International Conference on Game Theory (2024)</b></i><br/>
     Wade Hann-Caruthers, Alejandro Robinson-Cortés<br/><br/>
