--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
   <p>
     "<a href="papers/diffusion.pdf">Network and Timing Effects in Social Learning</a>"<br/>
     Wade Hann-Caruthers, Minghao Pan, Omer Tamuz<br/><br/>
-    "<a href="papers/luce.pdf">Luce Contracts</a>", <i>presented at <b>Economics and Computation (EC24)</b></i><br/>
+    "<a href="papers/luce.pdf">Luce Contracts</a>", <b>R&R</b> at <b>GEB</b></i><br/>
     (previous version circulated under the title "Optimality of weighted contracts for multi-agent contract design with a budget")<br/>
     Sumit Goel, Wade Hann-Caruthers<br/><br/>
     "Cascading mechanisms", <i>presented at <b>Stony Brook International Conference on Game Theory (2024)</b></i><br/>
     Wade Hann-Caruthers, Alejandro Robinson-Cortés<br/><br/>
     "<a href="papers/garbling.pdf">The Positive Effect of Garbling on Social Learning</a>"<br/>
     Itai Arieli, Yakov Babichenko, Wade Hann-Caruthers</br></br>
-    "Anonymous Network Formation"<br/>
+    "Anonymous Network Formation", <b>R&R</b> at <b>JET</b><br/>
     Itai Arieli, Leonie Baumann, Wade Hann-Caruthers
   </p>
 
