--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
   <p>
     <br/>
-    I am a postdoctoral fellow in the <a href="https://gametheory.net.technion.ac.il/">game theory group</a> at the Technion.
+    I am a postdoctoral fellow at the University of Michigan on the <a href="https://multi-agent-learning.engin.umich.edu/">Multi-Agent Learning MURI</a>, supervised by <a href="https://subramanian.engin.umich.edu/">Vijay Subramanian</a>.
     <br/>
     <br/>
-   My research interests lie primarily in microeconomic theory, especially social learning, social choice, and mechanism design. My current work is focused on social learning on networks, and in particular on the role of network structure in determining the quality of long-term population-level outcomes.
+   My research interests lie primarily in microeconomic theory, especially social learning, social choice, and mechanism design. My current work is focused on social network formation, including interventions to improve the spread of complex knowledge, and learning on social networks.
     <br/>
     <br/>
     Feel free to reach out (<b>whanncar@gmail.com</b>), especially if you want to chat about research! 
