Fixed r and r (network formation -> garbling)

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     Sumit Goel, Wade Hann-Caruthers<br/><br/>
     "Cascading mechanisms", <i>presented at <b>Stony Brook International Conference on Game Theory (2024)</b></i><br/>
     Wade Hann-Caruthers, Alejandro Robinson-Cortés<br/><br/>
-    "<a href="papers/garbling.pdf">The Positive Effect of Garbling on Social Learning</a>"<br/>
+    "<a href="papers/garbling.pdf">The Positive Effect of Garbling on Social Learning</a>", <b>R&R</b> at <b>JET</b><br/>
     Itai Arieli, Yakov Babichenko, Wade Hann-Caruthers</br></br>
-    "Anonymous Network Formation", <b>R&R</b> at <b>JET</b><br/>
+    "Anonymous Network Formation"<br/>
     Itai Arieli, Leonie Baumann, Wade Hann-Caruthers
   </p>
 
