--- a/index.html
+++ b/index.html
@@ -1,101 +1,40 @@
-
-<html>
-<body>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-V5H0P62XL5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-V5H0P62XL5');
-</script>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wade Hann-Caruthers</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
-  <p>    
-    <img src="img/wade.jpg" style="float:right;border: 1px solid #ddd; border-radius: 4px; padding: 5px; width:310px; height:412px;" alt="Wade"/>
-  </p>
+<body>
 
-  <h1>Wade Hann-Caruthers</h1> 
+<nav>
+    <a href="index.html">Home</a>
+    <a href="research.html">Research</a>
+    <a href="teaching.html">Teaching</a>
+    <a href="cv.html">CV</a>
+</nav>
 
-  <p>
-    <br/>
-    I am a postdoctoral fellow at the University of Michigan on the <a href="https://multi-agent-learning.engin.umich.edu/">Multi-Agent Learning MURI</a>, supervised by <a href="https://subramanian.engin.umich.edu/">Vijay Subramanian</a>.
-    <br/>
-    <br/>
-   My research interests lie primarily in microeconomic theory, especially social learning, social choice, and mechanism design. My current work is focused on social network formation, including interventions to improve the spread of complex knowledge, and learning on social networks.
-    <br/>
-    <br/>
-    Feel free to reach out (<b>whanncar@gmail.com</b>), especially if you want to chat about research! 
-    <!-- I am especially interested in projects that draw on insights from multiple fields and require cross-disciplinary collaboration.-->
-  </p>
+<header>
+    <img src="img/wade.jpg" alt="Wade Hann-Caruthers" class="profile">
 
-
-
-  <br/>
-<!--
-  <h2>Teaching</h2>
+    <h1>Wade Hann-Caruthers</h1>
 
     <p>
-      <a href="ps12.html">Notes for PS 12</a>
+        I am a postdoctoral fellow at the University of Michigan on the 
+        Multi-Agent Learning MURI, supervised by Vijay Subramanian.  
+        My research is in microeconomic theory, focusing on social learning, social choice, and mechanism design. 
+        I study how individuals acquire information in networks, how complex knowledge diffuses, and how mechanisms can improve learning and collective outcomes.
+	I also work on learning in games and modeling strategic interactions involving algorithmic/AI agents.
     </p>
--->
-  <!--Teaching: math camp FA 2019, A History of Budgetary Politics in the United States (PS 141) WI 2019 and WI 2022, Undergraduate game theory (PS/Ec 172) FA 2018 and SP 2022, Introduction to Political Science (PS 12) FA 2022-->
 
-  <!--Awards: PIMCO Data Science Fellow, 2019-2020-->
-<!--
-  <br/>
--->
-  <h2>Working papers</h2>
-
-  <p>
-    "<a href="papers/diffusion.pdf">Network and Timing Effects in Social Learning</a>"<br/>
-    Wade Hann-Caruthers, Minghao Pan, Omer Tamuz<br/><br/>
-    "<a href="papers/luce.pdf">Luce Contracts</a>", <b>R&R</b> at <b>GEB</b></i><br/>
-    (previous version circulated under the title "Optimality of weighted contracts for multi-agent contract design with a budget")<br/>
-    Sumit Goel, Wade Hann-Caruthers<br/><br/>
-    "Cascading mechanisms", <i>presented at <b>Stony Brook International Conference on Game Theory (2024)</b></i><br/>
-    Wade Hann-Caruthers, Alejandro Robinson-Cortés<br/><br/>
-    "<a href="papers/garbling.pdf">The Positive Effect of Garbling on Social Learning</a>", <b>R&R</b> at <b>JET</b><br/>
-    Itai Arieli, Yakov Babichenko, Wade Hann-Caruthers</br></br>
-    "Anonymous Network Formation"<br/>
-    Itai Arieli, Leonie Baumann, Wade Hann-Caruthers
-  </p>
-
-  <br/>
-
-  <h2>Publications</h2>
-
-  <p>
-    <h3>2024</h3>
-    "<a href="papers/projects.pdf">Project Selection with Partially Verifiable Information</a>"<br/>
-    Sumit Goel, Wade Hann-Caruthers, <b>accepted</b> at <b>Mathematical Social Sciences</b> (2024), <i>presented at <b>Conference on Web and Internet Economics (WINE 2022)</b></i><br/><br/>
-    <h3>2022</h3>
-      "<a href="papers/median.pdf">Optimality of the coordinate-wise median mechanism for strategyproof facility location in two dimensions</a>"<br/>
-      Sumit Goel, Wade Hann-Caruthers, <b>Social Choice and Welfare</b>
-    <h3>2021</h3>
-      "<a href="papers/equitable.pdf">Equitable voting rules</a>"<br/>
-      Laurent Bartholdi, Wade Hann-Caruthers, Maya Josyula, Omer Tamuz, Leeat Yariv, <b>Econometrica</b>
-      <br/><br/>
-      "<a href="papers/bohr.pdf">Additive conjugacy and the Bohr compactification of orthogonal representations</a>"<br/>
-      Zachary Chase, Wade Hann-Caruthers, Omer Tamuz, <b>Mathematische Annalen</b>
-    <h3>2018</h3>
-      "<a href="papers/deterministic.pdf">A deterministic protocol for sequential asymptotic learning</a>"<br/>
-      Yu Cheng, Wade Hann-Caruthers, Omer Tamuz, <b>IEEE International Symposium on Information Theory (ISIT)</b>
-      <br/><br/>
-      "<a href="papers/speed_of_learning.pdf">The speed of sequential asymptotic learning</a>"<br/>
-      Wade Hann-Caruthers, Vadim V. Martynov, Omer Tamuz, <b>Journal of Economic Theory</b>
-  </p>
-
-
-  <!--Conferences: Winter School of the Econometric Society (student speaker) 2019, EC '19 (speaker), Summer School of the Econometric Society (student speaker) 2019, International Symposium on Information Theory (speaker) 2018-->
+    <p>
+        <b>Email:</b> whanncar@gmail.com<br>
+        <b>CV:</b> <a href="docs/Wade_Hann-Caruthers_CV.pdf">Download PDF</a>
+    </p>
+</header>
 
 </body>
 </html>
-
-
 
