--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </nav>
 
 <header>
-    <img src="img/wade.jpg" alt="Wade Hann-Caruthers" class="profile">
+    <img src="img/wade-um.jpg" alt="Wade Hann-Caruthers" class="profile">
 
     <h1>Wade Hann-Caruthers</h1>
 
